--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "./node_modules/.bin/eslint ./src/*.js --fix",
     "build": "webpack"
   },
   "repository": {
@@ -27,6 +28,8 @@
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
     "eslint": "^4.19.1",
+    "eslint-plugin-react": "^7.9.1",
+    "rollup": "^0.60.7",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.6"
   }
