--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "./node_modules/.bin/eslint ./src/*.js --fix",
-    "build": "webpack"
+    "build-webpack": "webpack",
+    "build-rollup": "./node_modules/.bin/rollup -c"
   },
   "repository": {
     "type": "git",
@@ -27,9 +28,15 @@
     "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
     "eslint": "^4.19.1",
     "eslint-plugin-react": "^7.9.1",
     "rollup": "^0.60.7",
+    "rollup-plugin-babel": "^3.0.4",
+    "rollup-plugin-commonjs": "^9.1.3",
+    "rollup-plugin-json": "^3.0.0",
+    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-uglify": "^4.0.0",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.6"
   }
