--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "./node_modules/.bin/eslint ./src/*.js --fix",
     "build-webpack": "webpack",
-    "build-rollup": "./node_modules/.bin/rollup -c"
+    "build-rollup": "./node_modules/.bin/rollup -c",
+    "build-steal": "steal-tools",
+    "build-brunch": "brunch build --production",
+    "build-parcel": "parcel build ./src/renderer.js"
   },
   "repository": {
     "type": "git",
@@ -23,20 +26,26 @@
     "fusioncharts": "git+ssh://git@bitbucket.org/fusioncharts/fusioncharts-npm.git"
   },
   "devDependencies": {
+    "babel-brunch": "^6.1.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
+    "brunch": "^2.10.12",
     "eslint": "^4.19.1",
     "eslint-plugin-react": "^7.9.1",
+    "parcel-bundler": "^1.9.0",
     "rollup": "^0.60.7",
     "rollup-plugin-babel": "^3.0.4",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-json": "^3.0.0",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-uglify": "^4.0.0",
+    "steal": "^1.12.0",
+    "steal-tools": "^1.11.9",
+    "uglify-js": "^3.4.0",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.6"
   }
