--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build-rollup": "./node_modules/.bin/rollup -c",
     "build-steal": "steal-tools",
     "build-brunch": "brunch build --production",
-    "build-parcel": "parcel build ./src/renderer.js"
+    "build-parcel": "parcel build ./src/renderer.js",
+    "build-bitbundler": "bitbundler"
   },
   "repository": {
     "type": "git",
@@ -33,9 +34,15 @@
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
+    "bit-bundler": "^11.0.2",
+    "bit-loader-babel": "^2.0.0",
+    "bit-loader-builtins": "^2.0.2",
+    "bit-loader-eslint": "^1.3.0",
+    "bit-loader-shimmer": "^1.1.0",
     "brunch": "^2.10.12",
     "eslint": "^4.19.1",
     "eslint-plugin-react": "^7.9.1",
+    "fuse-box": "^3.2.2",
     "parcel-bundler": "^1.9.0",
     "rollup": "^0.60.7",
     "rollup-plugin-babel": "^3.0.4",
@@ -45,6 +52,8 @@
     "rollup-plugin-uglify": "^4.0.0",
     "steal": "^1.12.0",
     "steal-tools": "^1.11.9",
+    "typescript": "^2.9.2",
+    "uglify-es": "^3.3.9",
     "uglify-js": "^3.4.0",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.6"
