--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fc-npm-tester",
   "version": "1.0.0",
   "description": "Utility to test the npm package of fusioncharts",
-  "main": "index.js",
+  "main": "./src/renderer.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "./node_modules/.bin/eslint ./src/*.js --fix",
@@ -24,6 +24,8 @@
   },
   "homepage": "https://github.com/priyanjitdey94/fc-npm-tester#readme",
   "dependencies": {
+    "audit": "0.0.6",
+    "babel-plugin-transform-proto-to-assign": "^6.26.0",
     "fusioncharts": "git+ssh://git@bitbucket.org/fusioncharts/fusioncharts-npm.git"
   },
   "devDependencies": {
@@ -32,6 +34,7 @@
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "bit-bundler": "^11.0.2",
@@ -57,5 +60,6 @@
     "uglify-js": "^3.4.0",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.6"
-  }
+  },
+  "steal": {}
 }
